sas-core/main/default/objects/Messaging_Setting__mdt/Messaging_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Messaging Setting</label>
    <pluralLabel>Messaging Settings</pluralLabel>
</CustomObject>