sas-core/main/default/objects/Messaging_Setting__mdt/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CallEnd Survey</fullName>
                <default>true</default>
                <label>CallEnd Survey</label>
            </value>
            <value>
                <fullName>AddExtraSeat</fullName>
            </value>
            <value>
                <fullName>AddPetToCabin</fullName>
            </value>
            <value>
                <fullName>AddBaggage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>