sas-core/main/default/objects/Messaging_Setting__mdt/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <label>Channel Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>