sas-core/main/default/objects/Messaging_Setting__mdt/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SV</fullName>
                <default>true</default>
                <label>SV</label>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>EN</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>