sas-core/main/default/objects/Messaging_Setting__mdt/fields/MarketCode__c.field-meta.xml
<CustomField>
    <fullName>MarketCode__c</fullName>
    <label>Market Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>