sas-core/main/default/objects/Messaging_Setting__mdt/fields/Message_Template__c.field-meta.xml
<CustomField>
    <fullName>Message_Template__c</fullName>
    <label>Message Template</label>
    <length>200</length>
    <type>Text</type>
</CustomField>