sas-core/main/default/objects/Messaging_Setting__mdt/fields/Triggered_Outbound_Type__c.field-meta.xml
<CustomField>
    <fullName>Triggered_Outbound_Type__c</fullName>
    <label>Triggered Outbound Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Broadcast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>