sas-core/main/default/objects/Messaging_Setting__mdt/listViews/All_Messaging_Settings.listView-meta.xml
<ListView>
    <fullName>All_Messaging_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Channel_Name__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Message_Template__c</columns>
    <columns>Triggered_Outbound_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Messaging Settings</label>
    <language>en_US</language>
</ListView>