sas-core/main/default/objects/Messaging_Setting__mdt/listViews/all_new.listView-meta.xml
<ListView>
    <fullName>all_new</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Action__c</columns>
    <columns>Message_Template__c</columns>
    <columns>Channel_Name__c</columns>
    <columns>Language__c</columns>
    <columns>MarketCode__c</columns>
    <columns>Markets__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Triggered_Outbound_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>all new</label>
    <language>en_US</language>
</ListView>